revenue and expenses page completed

--- a/revenue.html
+++ b/revenue.html
@@ -50,27 +50,27 @@
                         <div class="nav__items">
                             <h3 class="nav__subtitle">Profile</h3>
     
-                            <a href="#" class="nav__link active">
+                            <a href="dashboard.html" class="nav__link active">
                                 <i class='bx bx-home nav__icon' ></i>
                                 <span class="nav__name">Dashboard</span>
                             </a>
-                            <a href="#" class="nav__link ">
+                            <a href="customer.html" class="nav__link ">
                                 <i class='bx bx-group nav__icon' ></i>
                                 <span class="nav__name">Customer</span>
                             </a>
-                            <a href="#" class="nav__link">
+                            <a href="tiffin_type.html" class="nav__link">
                                 <i class='bx bx-food-menu nav__icon' ></i>
                                 <span class="nav__name">Tiffin</span>
                             </a>
-                            <a href="#" class="nav__link">
+                            <a href="add_tiffin_order.html" class="nav__link">
                                 <i class='bx bx-stats nav__icon' ></i>
                                 <span class="nav__name">Tiffin Record</span>
                             </a>
-                            <a href="#" class="nav__link">
+                            <a href="expenses.html" class="nav__link">
                                 <i class='bx bx-wallet nav__icon' ></i>
                                 <span class="nav__name">Expenses</span>
                             </a>
-                            <a href="#" class="nav__link">
+                            <a href="revenue.html" class="nav__link">
                                 <i class='bx bx-dollar nav__icon' ></i>
                                 <span class="nav__name">Revenue</span>
                             </a>
@@ -116,7 +116,7 @@
 
                       <div class="row mt-5 ">
                         <h4 class="text-left">Statistics</h4>
-                        <div class="col-lg-4 text-center mt-3">
+                        <div class="col-lg-4  text-center mt-3">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
@@ -125,7 +125,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                    <td>3330</td>
+                                    <td class="text-danger"><b>3721</b></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -139,7 +139,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                    <td>30</td>
+                                    <td class="text-warning"><b>39</b></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -153,7 +153,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                    <td>1822</td>
+                                    <td class="text-success"><b>8282</b></td>
                                     </tr>
                                 </tbody>
                             </table>
