--- a/add_tiffin_order.html
+++ b/add_tiffin_order.html
@@ -50,27 +50,27 @@
                         <div class="nav__items">
                             <h3 class="nav__subtitle">Profile</h3>
     
-                            <a href="#" class="nav__link active">
+                            <a href="dashboard.html" class="nav__link active">
                                 <i class='bx bx-home nav__icon' ></i>
                                 <span class="nav__name">Dashboard</span>
                             </a>
-                            <a href="#" class="nav__link ">
+                            <a href="customer.html" class="nav__link ">
                                 <i class='bx bx-group nav__icon' ></i>
                                 <span class="nav__name">Customer</span>
                             </a>
-                            <a href="#" class="nav__link">
+                            <a href="tiffin_type.html" class="nav__link">
                                 <i class='bx bx-food-menu nav__icon' ></i>
                                 <span class="nav__name">Tiffin</span>
                             </a>
-                            <a href="#" class="nav__link">
+                            <a href="add_tiffin_order.html" class="nav__link">
                                 <i class='bx bx-stats nav__icon' ></i>
                                 <span class="nav__name">Tiffin Record</span>
                             </a>
-                            <a href="#" class="nav__link">
+                            <a href="expenses.html" class="nav__link">
                                 <i class='bx bx-wallet nav__icon' ></i>
                                 <span class="nav__name">Expenses</span>
                             </a>
-                            <a href="#" class="nav__link">
+                            <a href="revenue.html" class="nav__link">
                                 <i class='bx bx-dollar nav__icon' ></i>
                                 <span class="nav__name">Revenue</span>
                             </a>
