sweet alert added

--- a/customer.html
+++ b/customer.html
@@ -205,7 +205,7 @@
                                                     </div>
                                                     </div>
                                                 </div>
-                                            <a href="" class="button"><img style="height: 20px;" src="https://cdn-icons-png.flaticon.com/128/6861/6861362.png" alt=""></a>
+                                            <a href="#" class="button" id="delete-button"><img style="height: 20px;" src="https://cdn-icons-png.flaticon.com/128/6861/6861362.png" alt=""></a>
 
                                         </td>
                                       </tr>
